--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
 		var hSearch = $(".search").height(),
 			hUser = $(".slideShow").height(),
 			hNav = "",
-			hWin = window.innerHeight;
+			hWin = window.innerHeight,
 			wWin = window.innerWidth;
 		hNav += hWin - hSearch - hUser; //填满整屏
 		$(".nav").css("height",hNav + "px");
-		$("#sideNav").css("height",hWin + "px");
-		$("#sideNav").css("width",wWin*0.9 + "px");
-		$("#sideNav").css("left",-wWin + "px");
+		var hPage = $("#page").height(),
+			wPage = $("#page").width();
+		$("#sideNav").css("height",hPage + "px");
+		$("#sideNav").css("width",wPage*0.9 + "px");
+		$("#sideNav").css("left",-wPage + "px");
+		$(".slideBoard").css("width",wPage + "px");
+		$(".slideNav").css("width",wPage + "px");
 		//侧边栏按钮
 		var sideSwitch = 0;
 		$("#sideButton").on("touchstart",function() {	
 			if (sideSwitch == 0) {
 				$("#sideNav").css("left","0");
-				$("#sideButton").css("left",wWin*0.89 + "px");
+				$("#sideButton").css("left",wPage*0.89 + "px");
 				$("#mask").css("z-index","5").css("opacity", "0.7");
 				$(".midLine").css("width","1.25rem").css("opacity","0");
 				$(".topLine").css("top","1.25rem").css("transform","rotateZ(45deg) scale(1.414)");
@@ -33,7 +37,7 @@
 				$("#searchButton").css("opacity","0");
 				sideSwitch = 1;
 			} else if (sideSwitch == 1) {
-				$("#sideNav").css("left",-wWin + "px");
+				$("#sideNav").css("left",-wPage + "px");
 				$("#sideButton").css("left","0");
 				$("#mask").css("opacity", "0").css("z-index","-1");	
 				$(".midLine").css("width","1rem").css("opacity","1");
@@ -60,6 +64,57 @@
 				searchSwitch = 0;
 			}
 		});
+		//轮播图
+		var slideBd = $(".slider").children(),
+			sNow = "slideBoard slideNow",
+			sNext = "slideBoard slideNext",
+			sLast = "slideBoard slideLast",
+			sReset = "slideBoard",
+			i = 0;
+		function resetSlide() {
+			for (var j = 0;j < slideBd.length;j++) {
+				$(slideBd[j]).attr("class",sReset);
+			}
+		}
+		function changeSlide() {
+			//alert("change");
+			resetSlide();
+			$(slideBd[i]).attr("class",sLast);
+			if (i < slideBd.length - 2) {
+				$(slideBd[i+1]).attr("class",sNow);
+				$(slideBd[i+2]).attr("class",sNext);
+				i++;
+			} else if (i == slideBd.length -2) {
+				$(slideBd[i+1]).attr("class",sNow);
+				$(slideBd[0]).attr("class",sNext);
+				i++;
+			} else if (i == slideBd.length -1) {
+				$(slideBd[0]).attr("class",sNow);
+				$(slideBd[1]).attr("class",sNext);
+				i = 0;
+			}
+			//alert(i);
+			changeSlideDot();
+			setTimeout(changeSlide,2500);
+		}
+		changeSlide();
+		//轮播图导航
+		function changeSlideDot() {
+			switch (i) {
+				case 0:
+					$(".navDotNow").css("left","5%");
+					break;
+				case 1:
+					$(".navDotNow").css("left","35%");
+					break;
+				case 2:
+					$(".navDotNow").css("left","65%");
+					break;
+				case 3:
+					$(".navDotNow").css("left","95%");		
+					break;
+			}
+		}
 	})
 	</script>
 </head>
@@ -85,21 +140,20 @@
 		</div>
 		<div class="slideShow">
 			<div class="slider">
-			这里有轮播图
-				<a href="">
-					<div></div>
-				</a>
-				<a href="">
-					<div></div>
-				</a>
-				<a href="">
-					<div></div>
-				</a>
-				<a href="">
-					<div></div>
-				</a>
+				<div class="slideBoard slideNow">1</div>
+				<div class="slideBoard slideNext">2</div>
+				<div class="slideBoard">3</div>
+				<div class="slideBoard">4</div>
 			</div>
-			<div class="slideNav"></div>
+			<div class="slideNav">
+				<div class="navDotBar">
+					<div class="navDot"></div>
+					<div class="navDot"></div>
+					<div class="navDot"></div>
+					<div class="navDot"></div>
+					<div class="navDotNow"></div>
+				</div>
+			</div>
 		</div>
 		<div class="nav">
 			<a href="">
@@ -114,7 +168,9 @@
 			<a href="">
 				<p>拓展应用</p>
 			</a>
-		</div>		
+			<div class="clear"></div>
+		</div>
+		<div class="clear"></div>		
 	</div>
 	<div id="sideNav">
 		<div class="user">
@@ -125,6 +181,9 @@
 				<a href="">登录</a>
 				<a href="">注册</a>
 			</div>
+		</div>
+		<div class="newActivity">
+			<div class="noLog">赶快登陆查看新动态吧</div>
 		</div>
 	</div>
 </body>
