--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<title>玩转金院</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="pic/icon-120.png">
+	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="pic/icon-180.png">
 	<script src="js/jquery-3.1.1.js"></script>
 	<script type="text/javascript">
 	$(function() {
