--- a/index.html
+++ b/index.html
@@ -5,123 +5,11 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<title>玩转金院</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" media="screen and (max-device-width:640px)" href="css/style.css">
 	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="pic/icon-120.png">
 	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="pic/icon-180.png">
 	<script src="js/jquery-3.1.1.js"></script>
-	<script type="text/javascript">
-	$(function() {
-		//JQuery
-		var hSearch = $(".search").height(),
-			hUser = $(".slideShow").height(),
-			hNav = "",
-			hWin = window.innerHeight,
-			wWin = window.innerWidth;
-		hNav += hWin - hSearch - hUser; //填满整屏
-		$(".nav").css("height",hNav + "px");
-		var hPage = $("#page").height(),
-			wPage = $("#page").width();
-		$("#sideNav").css("height",hPage + "px");
-		$("#sideNav").css("width",wPage*0.9 + "px");
-		$("#sideNav").css("left",-wPage + "px");
-		$(".slideBoard").css("width",wPage + "px");
-		$(".slideNav").css("width",wPage + "px");
-		//侧边栏按钮
-		var sideSwitch = 0;
-		$("#sideButton").on("touchstart",function() {	
-			if (sideSwitch == 0) {
-				$("#sideNav").css("left","0");
-				$("#sideButton").css("left",wPage*0.89 + "px");
-				$("#mask").css("z-index","5").css("opacity", "0.7");
-				$(".midLine").css("width","1.25rem").css("opacity","0");
-				$(".topLine").css("top","1.25rem").css("transform","rotateZ(45deg) scale(1.414)");
-				$(".bottomLine").css("top","1.25rem").css("transform","rotateZ(-45deg) scale(1.414)");
-				$("#searchButton").css("opacity","0");
-				sideSwitch = 1;
-			} else if (sideSwitch == 1) {
-				$("#sideNav").css("left",-wPage + "px");
-				$("#sideButton").css("left","0");
-				$("#mask").css("opacity", "0").css("z-index","-1");	
-				$(".midLine").css("width","1rem").css("opacity","1");
-				$(".topLine").css("top","0.75rem").css("transform","rotateZ(0deg) scale(1)");
-				$(".bottomLine").css("top","1.75rem").css("transform","rotateZ(0deg) scale(1)");
-				$("#searchButton").css("opacity","1");
-				sideSwitch = 0;
-			}
-		});
-		//搜索开关
-		var searchSwitch = 0;
-		$("#searchButton").on("touchstart",function() {
-			if (searchSwitch == 0) {
-				$(".appTitle").css("opacity","0");
-				$(".searchInput").css("opacity","1").css("top","1.25rem").focus();
-				$(".searchOpen").css("opacity","0");
-				$(".searchClose").css("opacity","1");
-				searchSwitch = 1;
-			} else if (searchSwitch == 1) {
-				$(".appTitle").css("opacity","1");
-				$(".searchInput").css("top","-1rem").css("opacity","0").blur();
-				$(".searchOpen").css("opacity","1");
-				$(".searchClose").css("opacity","0");
-				searchSwitch = 0;
-			}
-		});
-		//轮播图
-		var slideBd = $(".slider").children(),
-			sNow = "slideBoard slideNow",
-			sNext = "slideBoard slideNext",
-			sLast = "slideBoard slideLast",
-			sReset = "slideBoard",
-			i = 0;
-		function resetSlide() {
-			for (var j = 0;j < slideBd.length;j++) {
-				$(slideBd[j]).attr("class",sReset);
-			}
-		}
-		function changeSlide() {
-			//alert("change");
-			resetSlide();
-			$(slideBd[i]).attr("class",sLast);
-			if (i < slideBd.length - 2) {
-				$(slideBd[i+1]).attr("class",sNow);
-				$(slideBd[i+2]).attr("class",sNext);
-				i++;
-			} else if (i == slideBd.length -2) {
-				$(slideBd[i+1]).attr("class",sNow);
-				$(slideBd[0]).attr("class",sNext);
-				i++;
-			} else if (i == slideBd.length -1) {
-				$(slideBd[0]).attr("class",sNow);
-				$(slideBd[1]).attr("class",sNext);
-				i = 0;
-			}
-			//alert(i);
-			changeSlideDot();
-			setTimeout(changeSlide,2500);
-		}
-		changeSlide();
-		//轮播图导航
-		function changeSlideDot() {
-			switch (i) {
-				case 0:
-					$(".navDotNow").css("left","5%");
-					break;
-				case 1:
-					$(".navDotNow").css("left","35%");
-					break;
-				case 2:
-					$(".navDotNow").css("left","65%");
-					break;
-				case 3:
-					$(".navDotNow").css("left","95%");		
-					break;
-			}
-		}
-		$(".navButton").on("touchstart",function() {
-			window.location.href = "";
-		})
-	})
-	</script>
+	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
 	<div id="page">
@@ -183,12 +71,23 @@
 				<p>玩转金院</p>
 			</div>
 			<div class="account">
-				<a href="">登录</a>
+				<a href="" id="loginButton">登录</a>
 				<a href="">注册</a>
 			</div>
 		</div>
 		<div class="newActivity">
 			<div class="noLog">赶快登陆查看新动态吧</div>
+		</div>
+	</div>
+	<div id="loginBoard">
+		<div class="loginContent">
+			<div class="loginTitle">登录</div>
+			<div class="loginForm">
+				<form>
+					<input type="text" name="userName" placeholder="用户名">
+					<input type="password" name="" placeholder="密码">
+				</form>
+			</div>
 		</div>
 	</div>
 </body>
