--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 				<p>玩转金院</p>
 			</div>
 			<div class="account">
-				<a href="" id="loginButton">登录</a>
-				<a href="">注册</a>
+				<div id="loginButton">登录</div>
+				<div>注册</div>
 			</div>
 		</div>
 		<div class="newActivity">
@@ -81,11 +81,15 @@
 	</div>
 	<div id="loginBoard">
 		<div class="loginContent">
-			<div class="loginTitle">登录</div>
+			<div class="loginTitle">欢迎</div>
 			<div class="loginForm">
 				<form>
-					<input type="text" name="userName" placeholder="用户名">
-					<input type="password" name="" placeholder="密码">
+					<input type="text" name="userName" placeholder="请输入用户名">
+					<div class="loginbottomLine"></div>
+					<input type="password" name="" placeholder="请输入密码">
+					<div class="loginbottomLine"></div>
+					<input type="submit" value="登录">
+					<div class="loginCancle">取消</div>
 				</form>
 			</div>
 		</div>
